Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/installer/custom.properties
+++ b/zh-TW/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=於快速啟動列 (&Q)
 WARN_MANUALLY_CLOSE_APP_INSTALL=必須先關閉 $BrandShortName 才能繼續安裝程序。\n\n請手動關閉 $BrandShortName 以繼續。
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=必須先關閉 $BrandShortName 才能繼續移除程序。\n\n請關閉 $BrandShortName 以繼續移除。
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName 正在執行。\n\n請關閉 $BrandShortName 後再執行您剛安裝好的版本。
+WARN_MANUALLY_CLOSE_APP_REFRESH=必須先關閉 $BrandShortName 才能繼續重新整理。\n\n請關閉 $BrandShortName 以繼續。
 WARN_WRITE_ACCESS=您沒有權限寫入安裝目錄。\n\n按「確定」選擇另一個目錄。
 WARN_DISK_SPACE=您沒有足夠的磁碟空間安裝到該位置。\n按「確定」選擇另一個目錄。
 WARN_MIN_SUPPORTED_OSVER_MSG=很抱歉，無法安裝 $BrandShortName。此版本的 $BrandShortName 需要 ${MinSupportedVer} 或更新版本。請點擊確定按鈕取得更多資訊。
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=移除 $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=從您的電腦移除 $BrandFullName。
 UN_CONFIRM_UNINSTALLED_FROM=將自下列位置移除 $BrandShortName:
 UN_CONFIRM_CLICK=按「移除」繼續。
+
+UN_REFRESH_PAGE_TITLE=要改成重新整理 $BrandShortName 嗎？
+UN_REFRESH_PAGE_EXPLANATION=若您遇到 $BrandShortName 的使用問題，重新整理一下可以幫助解決問題。\n\n將還原成出廠設定並移除附加元件，讓您重新獲得最佳效能。
+UN_REFRESH_LEARN_MORE=了解更多（&L）
+UN_REFRESH_BUTTON=重新整理 &brandShortName;（&R）
 
 BANNER_CHECK_EXISTING=正在檢查現有的安裝…
 
