--- a/zh-TW/devtools/client/netmonitor.properties
+++ b/zh-TW/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=簽發者
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=有效期間
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=結束於:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=指紋
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=當網址包含…時封鎖資源
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=移除條件規則
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=新增條件規則
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 netmonitor.actionbar.requestBlockingUsageNotice=在此新增要封鎖的請求網址格式。
@@ -1130,9 +1126,9 @@ netmonitor.summary.learnMore=了解狀態碼的更多資訊
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Referrer 政策:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Referrer
+netmonitor.headers.referrerPolicy=Referrer 政策
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
