--- a/sv-SE/devtools/client/netmonitor.properties
+++ b/sv-SE/devtools/client/netmonitor.properties
@@ -1126,6 +1126,7 @@ netmonitor.summary.referrerPolicy=Referreringspolicy:
 
 # LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
+netmonitor.headers.referrerPolicy=Referreringspolicy
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
