--- a/sv-SE/netwerk/necko.properties
+++ b/sv-SE/netwerk/necko.properties
@@ -57,6 +57,9 @@ CookieAllowedForOriginOnTrackerByHeuristic=Lagringsåtkomst automatiskt beviljad
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Lagringsåtkomst automatiskt beviljad för spårare “%2$S” på “%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Lagringsåtkomst beviljas automatiskt för ursprung “%2$S” på “%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Lagringsåtkomst beviljas automatiskt för förstapartisolering “%2$S” på “%1$S”.
 
