--- a/cy/browser/installer/custom.properties
+++ b/cy/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=Yn y bar &Cychwyn Cyflym
 WARN_MANUALLY_CLOSE_APP_INSTALL=Rhaid cau $BrandShortName er mwyn parhau gyda'r gosod.\n\nCaewch $BrandShortName er mwyn parhau.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Rhaid cau $BrandShortName er mwyn parhau gyda'r dadosod.\n\nCaewch $BrandShortName er mwyn parhau.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=Mae $BrandShortName yn rhedeg yn barod.\n\nCaewch $BrandShortName cyn cychwyn y fersiwn rydych newydd ei osod.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Rhaid fod $BrandShortName wedi cau i barhau gyda'r adnewyddu.\n \n Caewch $BrandShortName i barhau.
 WARN_WRITE_ACCESS=Nid oes gennych fynediad i ysgrifennu i'r cyfeiriadur gosod.\n\nCliciwch Iawn i ddewis cyfeiriadur gwahanol.
 WARN_DISK_SPACE=Nid oes gennych ddigon o le ar ddisg i osod yn y lleoliad hwn.\n\nCliciwch Iawn i ddewis lleoliad gwahanol.
 WARN_MIN_SUPPORTED_OSVER_MSG=Ymddiheuriadau, nid oes modd gosod $BrandShortName. Mae'r fersiwn hwn o $BrandShortName angen ${MinSupportedVer} neu fwy diweddar. Cliciwch ar y botwm Iawn am wybodaeth bellach.
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=Dad-osod $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Tynnu $BrandFullName oddi ar eich cyfrifiadur.
 UN_CONFIRM_UNINSTALLED_FROM=Bydd $BrandShortName yn cael ei ddadosod o'r ffolder canlynol:
 UN_CONFIRM_CLICK=Clicio Dadosod i barhau.
+
+UN_REFRESH_PAGE_TITLE=Adnewyddu $BrandShortName yn lle hynny?
+UN_REFRESH_PAGE_EXPLANATION=Os ydych yn cael anawsterau gyda $BrandShortName, gall ei adnewyddu helpu. \n \ nBydd hyn yn adfer y gosodiadau rhagosodedig ac yn tynnu'r ychwanegion. Cychwynnwch o'r newydd ar gyfer y perfformiad gorau posibl.
+UN_REFRESH_LEARN_MORE=&Dysgu rhagor
+UN_REFRESH_BUTTON=&Adnewyddu $BrandShortName
 
 BANNER_CHECK_EXISTING=Gwirio'r gosodiad presennol…
 
