--- a/cy/devtools/client/netmonitor.properties
+++ b/cy/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=Cyhoeddwyd Gan
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=Cyfnod Dilysrwydd
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=Gorffen ar:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=Olion Bysedd
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=Rhwystro adnodd pan fydd URL yn cynn
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=Tynnu patrwm
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=Ychwanegu patrwm
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 netmonitor.actionbar.requestBlockingUsageNotice=Ychwanegwch batrymau URL yma i rwystro ceisiadau cydweddu.
@@ -1130,9 +1126,9 @@ netmonitor.summary.learnMore=Dysgu rhagor am god statws
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Polisi Cyfeiriwr:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Cyfeiriwr
+netmonitor.headers.referrerPolicy=Polisi Cyfeiriwr:
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
