Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/browser/installer/custom.properties
+++ b/nb-NO/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=&Hurtigstartlinjen
 WARN_MANUALLY_CLOSE_APP_INSTALL=Du må lukke $BrandShortName før du installerer.\n\nLukk $BrandShortName for å fortsette.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Du må lukke $BrandShortName før du avinstallerer.\n\nLukk $BrandShortName for å fortsette.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName er allerede åpen.\n\nLukk $BrandShortName før du starter versjonen du nettopp installerte.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Du må lukke $BrandShortName før du tilbakestiller den.\n\nLukk $BrandShortName for å fortsette.
 WARN_WRITE_ACCESS=Du har ikke tilgang til å skrive til installasjonsmappen.\n\nTrykk OK for å velge en annen mappe.
 WARN_DISK_SPACE=Du har ikke nok ledig diskplass for å installere til denne mappen.\n\nTrykk OK for å velge en annen plassering.
 WARN_MIN_SUPPORTED_OSVER_MSG=Desverre kan ikke $BrandShortName installeres. Denne versjonen av $BrandShortName krever ${MinSupportedVer} eller nyere. Trykk på OK for mer informasjon.
@@ -60,6 +61,10 @@ UN_CONFIRM_PAGE_TITLE=Avinstaller $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Slett $BrandFullName fra datamaskinen.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName fra følgende mappe:
 UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsette.
+
+UN_REFRESH_PAGE_TITLE=Tilbakestill $BrandShortName i stedet?
+UN_REFRESH_LEARN_MORE=&Les mer
+UN_REFRESH_BUTTON=&Tilbakestill $BrandShortName
 
 BANNER_CHECK_EXISTING=Kontrollerer installasjonen …
 
