--- a/nb-NO/dom/chrome/security/security.properties
+++ b/nb-NO/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Dette nettstedet bruker krypteringsmetoden RC4 for krypte
 
 DeprecatedTLSVersion=Dette nettstedet bruker en foreldet versjon av TLS som vil bli deaktivert i mars 2020. Oppgrader til TLS 1.2 eller 1.3.
 
+DeprecatedTLSVersion2=Dette nettstedet bruker en utdatert versjon av TLS. Oppgrader til TLS 1.2 eller 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Resursen fra «%1$S» ble blokkert på grunn av feil MIME-type («%2$S») (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Funksjonspolicy: Hopper over ikke-støttet tillat
 ReferrerLengthOverLimitation=HTTP Referrer header: Lengden er over grensen på «%1$S» byte - reduserer referrer header ned til opphav: «%2$S»
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=HTTP Referrer header: Lengden for opphav innen referrer er over grensen på «%1$S» byte - fjerner referrer med opphav: «%2$S».
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Ugyldig X-Frame-Options: «%1$S» header fra «%2$S» lastet inn i «%3$S».
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Lasting nektet av X-Frame-Options: «%1$S» fra «%2$S», nettstedet tillater ikke innramming. Forsøkte å laste inn «%3$S».
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Lasting nektet av X-Frame-Options: «%1$S» fra «%2$S», nettstedet tillater ikke kryss-opprinnelse innramming fra «%3$S».
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
