--- a/cy/browser/installer/custom.properties
+++ b/cy/browser/installer/custom.properties
@@ -46,7 +46,7 @@ ICONS_QUICKLAUNCH=Yn y bar &Cychwyn Cyflym
 WARN_MANUALLY_CLOSE_APP_INSTALL=Rhaid cau $BrandShortName er mwyn parhau gyda'r gosod.\n\nCaewch $BrandShortName er mwyn parhau.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Rhaid cau $BrandShortName er mwyn parhau gyda'r dadosod.\n\nCaewch $BrandShortName er mwyn parhau.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=Mae $BrandShortName yn rhedeg yn barod.\n\nCaewch $BrandShortName cyn cychwyn y fersiwn rydych newydd ei osod.
-WARN_MANUALLY_CLOSE_APP_REFRESH=Rhaid fod $BrandShortName wedi cau i barhau gyda'r adnewyddu.\n \n Caewch $BrandShortName i barhau.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Rhaid fod $BrandShortName ar gau i barhau gyda'r adnewyddu.\n \n Caewch $BrandShortName i barhau.
 WARN_WRITE_ACCESS=Nid oes gennych fynediad i ysgrifennu i'r cyfeiriadur gosod.\n\nCliciwch Iawn i ddewis cyfeiriadur gwahanol.
 WARN_DISK_SPACE=Nid oes gennych ddigon o le ar ddisg i osod yn y lleoliad hwn.\n\nCliciwch Iawn i ddewis lleoliad gwahanol.
 WARN_MIN_SUPPORTED_OSVER_MSG=Ymddiheuriadau, nid oes modd gosod $BrandShortName. Mae'r fersiwn hwn o $BrandShortName angen ${MinSupportedVer} neu fwy diweddar. Cliciwch ar y botwm Iawn am wybodaeth bellach.
