--- a/cy/dom/chrome/security/security.properties
+++ b/cy/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Mae'r wefan yn defnyddio seiffr RC4 ar gyfer amgryptiad, 
 
 DeprecatedTLSVersion=Mae'r wefan hon yn defnyddio fersiwn anghymeradwy o TLS a fydd yn cael ei analluogi ym mis Mawrth 2020. Diweddarwch i TLS 1.2 neu 1.3.
 
+DeprecatedTLSVersion2=Mae'r wefan hon yn defnyddio fersiwn anghymeradwy o TLS. Uwchraddiwch i TLS 1.2 neu 1.3 os gwelwch yn dda.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Cafodd yr adnodd o “%1$S” ei rwystro oherwydd gwrthdaro math MIME (“%2$S”) (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Feature Policy: Hepgor enw nodwedd heb ei gynnal 
 ReferrerLengthOverLimitation=Pennyn HTTP Cyfeiriwr: Mae hyd dros derfyn beitiau “%1$S” - tynnu pennyn cyfeiriwr i lawr i'r gwreiddiol: “%2$S”
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=Pennyn HTTP Cyfeiriwr: Mae hyd y gwreiddiol o fewn y cyfeiriwr dros terfyn didau “%1$S” - tynnu'r cyfeiriwr gyda'r gwreiddiol: “%2$S”.
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Pennyn X-Frame-Options: “%1$S” annilys o “%2$S” wedi ei lwytho i “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Gwrthodwyd y llwyth gan X-Frame-Options: “%1$S” o “%2$S”, nid yw'r wefan yn caniatáu unrhyw fframio. Ceisiwyd ei lwytho i “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Gwrthodwyd y llwyth gan X-Frame-Options: “%1$S” o “%2$S”, nid yw'r wefan yn caniatáu fframio croes ffynhonnell o “%3$S”.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
