Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/browser/installer/custom.properties
+++ b/he/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=בסרגל כלים הפעלה מהירה
 WARN_MANUALLY_CLOSE_APP_INSTALL=על $BrandShortName להיסגר כדי להמשיך בהתקנה.\n\nנא לסגור את $BrandShortName להמשך.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=על $BrandShortName להיסגר כדי להמשיך בהסרה.\n\nנא לסגור את $BrandShortName להמשך.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName פעיל כרגע.\n\nנא לסגור את $BrandShortName לפני הפעלת הגרסה שהתקנת.
+WARN_MANUALLY_CLOSE_APP_REFRESH=על $BrandShortName להיסגר כדי להמשיך ברענון.\n\nנא לסגור את $BrandShortName להמשך.
 WARN_WRITE_ACCESS=אין ברשותך הרשאות כתיבה לתיקיית ההתקנה. \n\nלחץ על אישור כדי לבחור בתיקייה אחרת.
 WARN_DISK_SPACE=אין לך מספיק מקום פנוי כדי להתקין למיקום זה. \n\nלחץ על אישור כדי לבחור במיקום אחר.
 WARN_MIN_SUPPORTED_OSVER_MSG=מצטערים, לא ניתן להתקין את $BrandShortName. גרסה זו של $BrandShortName דורשת ${MinSupportedVer} ומעלה. נא ללחוץ על כפתור האישור למידע נוסף.
@@ -60,6 +61,10 @@ UN_CONFIRM_PAGE_TITLE=הסרת $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=מסיר את $BrandFullName מהמחשב שלך.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName יוסר מהמיקום הבא:
 UN_CONFIRM_CLICK=יש ללחוץ על ״הסרה״ כדי להמשיך.
+
+UN_REFRESH_PAGE_TITLE=האם לרענן את $BrandShortName במקום?
+UN_REFRESH_LEARN_MORE=&מידע נוסף
+UN_REFRESH_BUTTON=&רענון $BrandShortName
 
 BANNER_CHECK_EXISTING=בודק התקנה קיימת…
 
