Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/browser/installer/custom.properties
+++ b/he/browser/installer/custom.properties
@@ -63,6 +63,7 @@ UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName יוסר מהמיקום הבא:
 UN_CONFIRM_CLICK=יש ללחוץ על ״הסרה״ כדי להמשיך.
 
 UN_REFRESH_PAGE_TITLE=האם לרענן את $BrandShortName במקום?
+UN_REFRESH_PAGE_EXPLANATION=אם הינך חווה בעיות עם $BrandShortName, ייתכן שרענון יוכל לעזור.\n\nפעולה זו תשחזר את ההגדרות ברירת המחדל ותסיר תוספות. זוהי התחלה חדשה לטובת ביצועים מיטביים.
 UN_REFRESH_LEARN_MORE=&מידע נוסף
 UN_REFRESH_BUTTON=&רענון $BrandShortName
 
