--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1113,8 +1113,9 @@ netmonitor.summary.learnMore=מידע נוסף על קודי מצב
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=מדיניות הפנייה:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
+netmonitor.headers.referrerPolicy=מדיניות הפנייה
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
