--- a/uk/browser/installer/custom.properties
+++ b/uk/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=У панелі &швидкого запуску
 WARN_MANUALLY_CLOSE_APP_INSTALL=Щоб продовжити встановлення, $BrandShortName повинен бути закритий.\n\nБудь ласка, закрийте $BrandShortName для продовження.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Щоб продовжити вилучення, $BrandShortName повинен бути закритий.\n\nБудь ласка, закрийте $BrandShortName для продовження.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName вже запущено.\n\nБудь ласка, закрийте $BrandShortName перед запуском версії, яку ви щойно встановили.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Щоб продовжити відновлення, $BrandShortName повинен бути закритий.\n\nБудь ласка, закрийте $BrandShortName для продовження.
 WARN_WRITE_ACCESS=У вас недостатньо прав на запис у теку встановлення.\n\nДля вибору іншої теки натисніть кнопку OK.
 WARN_DISK_SPACE=Недостаньо місця на диску для встановлення в цю теку.\n\nДля вибору іншої теки натисніть кнопку OK.
 WARN_MIN_SUPPORTED_OSVER_MSG=Вибачте, $BrandShortName не може бути встановлений. Ця версія $BrandShortName потребує ${MinSupportedVer} або новіше. Натисніть на кнопку OK для додаткової інформації.
@@ -60,6 +61,8 @@ UN_CONFIRM_PAGE_TITLE=Вилучення $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Вилучити $BrandFullName з вашого комп’ютера.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName буде видалено з такої теки:
 UN_CONFIRM_CLICK=Клацніть «Вилучити» для продовження.
+
+UN_REFRESH_PAGE_TITLE=Відновити $BrandShortName натомість?
 
 BANNER_CHECK_EXISTING=Перевірка попереднього встановлення…
 
