Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Іhor Hordiichuk <igor_ck@outlook.com>

--- a/uk/browser/installer/custom.properties
+++ b/uk/browser/installer/custom.properties
@@ -64,6 +64,8 @@ UN_CONFIRM_CLICK=Клацніть «Вилучити» для продовжен
 
 UN_REFRESH_PAGE_TITLE=Відновити $BrandShortName натомість?
 UN_REFRESH_PAGE_EXPLANATION=Якщо у вас виникли проблеми з $BrandShortName, відновлення може допомогти.\n\nБуде відновлено типові налаштування та видалено додатки. Почніть з нуля та отримайте найкращу швидкодію.
+UN_REFRESH_LEARN_MORE=&Докладніше
+UN_REFRESH_BUTTON=&Відновити $BrandShortName
 
 BANNER_CHECK_EXISTING=Перевірка попереднього встановлення…
 
