Pontoon: Update Finnish (fi) localization of Firefox Co-authored-by: Jiri Grönroos <jiri.gronroos@iki.fi> Co-authored-by: Lasse Liehu <lasse.liehu@iki.fi>

--- a/fi/browser/installer/custom.properties
+++ b/fi/browser/installer/custom.properties
@@ -61,6 +61,8 @@ UN_CONFIRM_PAGE_SUBTITLE=Poista $BrandFullNamein asennus tietokoneeltasi.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName poistetaan seuraavasta kohteesta:
 UN_CONFIRM_CLICK=Jatka valitsemalla Poista.
 
+UN_REFRESH_LEARN_MORE=&Lue lisää
+
 BANNER_CHECK_EXISTING=Etsitään aikaisempia asennuksia…
 
 STATUS_INSTALL_APP=Asennetaan $BrandShortName…
