Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/installer/custom.properties
+++ b/zh-TW/browser/installer/custom.properties
@@ -64,7 +64,8 @@ UN_CONFIRM_CLICK=按「移除」繼續。
 
 UN_REFRESH_PAGE_TITLE=要改成重新整理 $BrandShortName 嗎？
 UN_REFRESH_PAGE_EXPLANATION=若您遇到 $BrandShortName 的使用問題，重新整理一下可以幫助解決問題。\n\n將還原成出廠設定並移除附加元件，讓您重新獲得最佳效能。
-UN_REFRESH_LEARN_MORE=了解更多（&L）
+UN_REFRESH_LEARN_MORE=了解更多 (&L)
+UN_REFRESH_BUTTON=重新整理 $BrandShortName (&R)
 
 BANNER_CHECK_EXISTING=正在檢查現有的安裝…
 
