Pontoon: Update Catalan (ca) localization of Firefox Co-authored-by: Jordi Serratosa <jordis@softcatala.cat>

--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -440,7 +440,6 @@ newWindowButton.tooltip=Obre una finestra nova (%S)
 newTabButton.tooltip=Obre una pestanya nova (%S)
 
 newTabContainer.tooltip=Obre una pestanya nova (%S)\nManteniu premut per obrir una pestanya de contenidor nova
-
 newTabAlwaysContainer.tooltip=Selecciona un contenidor per obrir una pestanya nova
 
 # Offline web applications
@@ -683,12 +682,12 @@ protections.header=Proteccions per a %S
 # LOCALIZATION NOTE (protections.disableAriaLabel):
 # Text that gets spoken by a screen reader if the button will disable protections.
 # %s is the site's hostname.
-protections.disableAriaLabel=Desactiva les proteccions de per a %S
+protections.disableAriaLabel=Desactiva les proteccions per a %S
 
 # LOCALIZATION NOTE (protections.enableAriaLabel):
 # Text that gets spoken by a screen reader if the button will enable protections.
 # %s is the site's hostname.
-protections.enableAriaLabel=Activa les proteccions de per a %S
+protections.enableAriaLabel=Activa les proteccions per a %S
 
 # Blocking and Not Blocking sub-views in the Protections Panel
 protections.blocking.fingerprinters.title=Generadors d'empremtes digitals blocats
@@ -1228,3 +1227,5 @@ confirmationHint.breakageReport.label = S'ha enviat l'informe. Gràcies!
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Adreces d'interès actives del %S
 
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
