--- a/it/browser/chrome/browser/tabbrowser.properties
+++ b/it/browser/chrome/browser/tabbrowser.properties
@@ -29,3 +29,6 @@ tabs.openWarningTitle = Conferma apertura
 tabs.openWarningMultipleBranded = Si stanno per aprire %S schede. Questo potrebbe comportare un rallentamento di %S durante il caricamento delle pagine. Procedere comunque?
 tabs.openButtonMultiple = Apri schede
 tabs.openWarningPromptMeBranded = Avvisa quando l’apertura contemporanea di più schede potrebbe rallentare %S
+browsewithcaret.checkMsg = Non visualizzare questo avviso in futuro.
+browsewithcaret.checkWindowTitle = Navigazione nel testo
+browsewithcaret.checkLabel = Premendo il tasto F7 è possibile attivare o disattivare la Navigazione nel testo. Questa funzione visualizza un cursore all’interno della pagina web e consente la selezione del testo attraverso la tastiera. Attivare la Navigazione nel testo?
