[S] dom: Bug 1601594 - P1 - Using Origin as the key for DocGroup

--- a/it/dom/chrome/dom/dom.properties
+++ b/it/dom/chrome/dom/dom.properties
@@ -234,6 +234,7 @@ UnsupportedEntryTypesIgnored = Ignorati entryTypes non supportati: %S.
 AllEntryTypesIgnored = Nessun entryTypes valido: registrazione annullata.
 GTK2Conflict2 = Evento da tastiera non disponibile in GTK2: tasto=“%S” modificatori=“%S” id=“%S”
 WinConflict2 = Evento da tastiera non disponibile in alcuni layout di tastiera: tasto=“%S” modificatori=“%S” id=“%S”
+DocumentSetDomainNotAllowedWarning = L’impostazione di document.domain in un ambiente cross-origin isolato non è consentita.
 DeprecatedTestingInterfaceWarning = TestingDeprecatedInterface è un’interfaccia utilizzata solo a scopo di test. Questo è un messaggio di prova per funzionalità deprecate.
 DeprecatedTestingMethodWarning = TestingDeprecatedInterface.deprecatedMethod() è un’interfaccia utilizzata solo a scopo di test. Questo è un messaggio di prova per funzionalità deprecate.
 DeprecatedTestingAttributeWarning = TestingDeprecatedInterface.deprecatedAttribute è un’interfaccia utilizzata solo a scopo di test. Questo è un messaggio di prova per funzionalità deprecate.
