--- a/fr/browser/installer/custom.properties
+++ b/fr/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=Dans la barre « &Lancement rapide »
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName doit être fermé pour procéder à l’installation.\n\nVeuillez fermer $BrandShortName pour continuer.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName doit être fermé pour procéder à la désinstallation.\n\nVeuillez fermer $BrandShortName pour continuer.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName est déjà en cours d’exécution.\n\nVeuillez fermer $BrandShortName avant de lancer la version que vous venez d’installer.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$BrandShortName doit être fermé pour procéder à la réparation.\n\nVeuillez fermer $BrandShortName pour continuer.
 WARN_WRITE_ACCESS=Vous n’avez pas de permission d’écriture sur le répertoire d’installation.\n\nCliquez sur « OK » pour sélectionner un répertoire différent.
 WARN_DISK_SPACE=Il n’y a pas suffisamment d’espace disque disponible pour faire l’installation à cet emplacement.\n\nCliquez sur « OK » pour sélectionner un emplacement différent.
 WARN_MIN_SUPPORTED_OSVER_MSG=Nous sommes désolés, mais $BrandShortName ne peut pas être installé. Cette version de $BrandShortName nécessite ${MinSupportedVer} ou plus récent. Veuillez cliquer sur le bouton OK pour davantage d’informations.
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=Désinstallation de $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Suppression de $BrandFullName de votre ordinateur.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName va être désinstallé de l’emplacement suivant :
 UN_CONFIRM_CLICK=Cliquez sur « Désinstaller » pour continuer.
+
+UN_REFRESH_PAGE_TITLE=Réparer $BrandShortName à la place ?
+UN_REFRESH_PAGE_EXPLANATION=Si vous rencontrez des problèmes avec $BrandShortName, une réparation peut vous aider.\n\nCela restaurera les paramètres par défaut et supprimera les modules complémentaires. Recommencez à zéro pour des performances optimales.
+UN_REFRESH_LEARN_MORE=&En savoir plus
+UN_REFRESH_BUTTON=&Réparer $BrandShortName
 
 BANNER_CHECK_EXISTING=Vérification de l’installation existante…
 
