--- a/fr/devtools/client/netmonitor.properties
+++ b/fr/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=Émis par
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=Période de validité
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=Expire le :
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=Empreintes numériques
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=Bloquer la ressource lorsque l’URL
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=Supprimer le critère
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=Ajouter un critère
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 netmonitor.actionbar.requestBlockingUsageNotice=Ajoutez des modèles d’URL ici pour bloquer les requêtes correspondantes.
@@ -1130,9 +1126,9 @@ netmonitor.summary.learnMore=En savoir plus sur le code d’état
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Politique de référent :
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Référent
+netmonitor.headers.referrerPolicy=Politique de référent
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
