--- a/fr/devtools/client/webconsole.properties
+++ b/fr/devtools/client/webconsole.properties
@@ -570,6 +570,10 @@ webconsole.input.editor.onboarding.label=Développez votre code plus rapidement 
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=J’ai compris !
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=J’ai compris
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
