--- a/fr/dom/chrome/security/security.properties
+++ b/fr/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Ce site utilise l’algorithme RC4 pour le chiffrement. C
 
 DeprecatedTLSVersion=Ce site utilise une version obsolète de TLS qui sera désactivée en 2020. Veuillez mettre à jour vers TLS 1.2 ou 1.3.
 
+DeprecatedTLSVersion2=Ce site utilise une version obsolète de TLS. Veuillez mettre à niveau vers TLS 1.2 ou 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=La ressource à l’adresse « %1$S » a été bloquée en raison d’un type MIME (« %2$S ») incorrect (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Feature Policy : valeur allow non prise en charg
 ReferrerLengthOverLimitation=En-tête de référent HTTP : la longueur est supérieure à la limite de « %1$S » octets — suppression de l’en-tête de référent jusqu’à l’origine : « %2$S »
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=En-tête de référent HTTP : la longueur est supérieure à la limite de « %1$S » octets — suppression du référent avec l’origine « %2$S ».
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = X-Frame-Options non valide : en-tête « %1$S » à l’adresse « %2$S » chargé dans « %3$S »
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Chargement refusé par X-Frame-Options : « %1$S » à l’adresse « %2$S », le site ne permet pas l’utilisation de cadres. Tentative de chargement dans « %3$S ».
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Chargement refusé par X-Frame-Options : « %1$S » à l’adresse « %2$S », le site ne permet pas l’utilisation de cadres multiorigines depuis « %3$S ».
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
