Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/browser/installer/custom.properties
+++ b/oc/browser/installer/custom.properties
@@ -61,6 +61,8 @@ UN_CONFIRM_PAGE_SUBTITLE=Supression de $BrandFullName de vòstre ordenador.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName va èsser desinstallat de l'emplaçament seguent :
 UN_CONFIRM_CLICK=Clicatz sus « Desinstallar » per contunhar.
 
+UN_REFRESH_LEARN_MORE=&Ne saber mai
+
 BANNER_CHECK_EXISTING=Verificacion de l'installacion existenta…
 
 STATUS_INSTALL_APP=Installacion de $BrandShortName…
