Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/toolkit/chrome/global/charsetMenu.properties
+++ b/oc/toolkit/chrome/global/charsetMenu.properties
@@ -35,7 +35,7 @@ charsetMenuAutodet.ja = Japonés
 charsetMenuAutodet.ja.key = J
 charsetMenuAutodet.ru = Rus
 charsetMenuAutodet.ru.key = R
-charsetMenuAutodet.uk = Ucraïnian
+charsetMenuAutodet.uk = Ucrainés
 charsetMenuAutodet.uk.key = U
 
 # Globally-relevant
