--- a/sl/browser/installer/custom.properties
+++ b/sl/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=v vrstici &Hitri zagon
 WARN_MANUALLY_CLOSE_APP_INSTALL=Pred nadaljevanjem z namestitvijo morate $BrandShortName zapreti.\n\nZa nadaljevanje zaprite $BrandShortName.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Za nadaljevanje odstranitve je treba $BrandShortName zapreti.\n\nZa nadaljevanje zaprite $BrandShortName.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName se že izvaja.\n\nPreden zaženete različico, ki ste jo pravkar namestili, zaprite $BrandShortName.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Za nadaljevanje osvežitve je treba $BrandShortName zapreti.\n\nZa nadaljevanje zaprite $BrandShortName.
 WARN_WRITE_ACCESS=Nimate dostopa za pisanje v namestitveno mapo.\n\nKliknite gumb V redu in izberite drugo mapo.
 WARN_DISK_SPACE=Na tem mestu ni dovolj prostora na disku.\n\nKliknite gumb V redu in izberite drugo mesto.
 WARN_MIN_SUPPORTED_OSVER_MSG=Žal $BrandShortNamea ni mogoče namestiti. Ta različica $BrandShortNamea zahteva ${MinSupportedVer} ali novejšo. Za več informacij kliknite V redu.
@@ -60,6 +61,7 @@ UN_CONFIRM_PAGE_TITLE=Odstrani $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Odstranite $BrandFullName iz svojega računalnika.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName bo odstranjen z naslednjega mesta:
 UN_CONFIRM_CLICK=Kliknite Odstrani za nadaljevanje.
+
 
 BANNER_CHECK_EXISTING=Preverjanje obstoječe namestitve ...
 
