--- a/nl/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/nl/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -121,7 +121,9 @@ confirmDeleteThisLDAPDirTitle=Lokale LDAP-directory verwijderen
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
 #          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Weet u zeker dat u de lokale kopie van deze LDAP-directory en alle bijbehorende offlinecontacten wilt verwijderen?\n• #1
 
+confirmDeleteThisCollectionAddressbookTitle=Verzameladresboek verwijderen
 # LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
 # #1 The name of the selected collection address book
 # #2 The name of the application (Thunderbird)
@@ -129,6 +131,7 @@ confirmDeleteThisLDAPDirTitle=Lokale LDAP-directory verwijderen
 # Example: If this address book is deleted, Thunderbird will no longer collect addresses.
 #          Are you sure you want to delete this address book and all of its contacts?
 #          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=Als dit adresboek wordt verwijderd, zal #2 geen adressen meer verzamelen.\nWeet u zeker dat u dit adresboek en alle bijbehorende contacten wilt verwijderen?\n• #1
 
 propertyPrimaryEmail=E-mailadres
 propertyListName=Lijstnaam
@@ -147,6 +150,15 @@ propertyCustom2=Overig 2
 propertyCustom3=Overig 3
 propertyCustom4=Overig 4
 
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber-ID
+propertyIRC=IRC-bijnaam
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -233,6 +245,7 @@ joinMeInThisChat=Vergezel+me+in+deze+chat.
 headingHome=Thuis
 headingWork=Werk
 headingOther=Overig
+headingChat=Chat
 headingPhone=Telefoon
 headingDescription=Beschrijving
 headingAddresses=Adressen
