--- a/ko/browser/installer/custom.properties
+++ b/ko/browser/installer/custom.properties
@@ -43,9 +43,10 @@ CREATE_ICONS_DESC=$BrandShortName 바로 가기를 만들 항목 선택:
 ICONS_DESKTOP=바탕 화면
 ICONS_STARTMENU=프로그램 폴더
 ICONS_QUICKLAUNCH=빠른 실행
-WARN_MANUALLY_CLOSE_APP_INSTALL=설치를 계속하려면 $BrandShortName를 종료해야 합니다.\n\n$BrandShortName를 종료하세요.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=설치 제거를 위해 $BrandShortName를 종료해야 합니다.\n\n계속하려면 $BrandShortName를 종료하세요.
+WARN_MANUALLY_CLOSE_APP_INSTALL=설치를 진행하려면 $BrandShortName를 닫아야 합니다.\n\n계속하려면 $BrandShortName를 닫으세요.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=설치 제거를 진행하려면 $BrandShortName를 닫아야 합니다.\n\n계속하려면 $BrandShortName를 닫으세요.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName가 이미 실행 중입니다.\n\n최신 버전을 설치하려면 $BrandShortName를 먼저 종료하세요.
+WARN_MANUALLY_CLOSE_APP_REFRESH=새로 설정으로 진행하려면 $BrandShortName를 닫아야 합니다.\n\n계속하려면 $BrandShortName를 닫으세요.
 WARN_WRITE_ACCESS=설치 디렉터리에 대한 쓰기 권한이 없습니다.\n\n다른 디렉터리를 선택하려면 확인을 누르세요.
 WARN_DISK_SPACE=이 위치에 설치하기에 디스크 공간이 부족합니다.\n\n다른 위치를 선택하려면 확인을 누르세요.
 WARN_MIN_SUPPORTED_OSVER_MSG=죄송합니다, $BrandShortName을 설치할 수 없습니다. 이 버전의 $BrandShortName은 ${MinSupportedVer} 이상이어야 합니다. 자세한 내용은 확인 버튼을 누르세요.
