--- a/ko/browser/chrome/browser/shellservice.properties
+++ b/ko/browser/chrome/browser/shellservice.properties
@@ -2,8 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-optionsLabel=%S 설정
-safeModeLabel=%S 안전 모드
+optionsLabel=%S 설정(&O)
+safeModeLabel=%S 안전 모드(&S)
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
