Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/installer/override.properties
+++ b/ko/browser/installer/override.properties
@@ -25,16 +25,16 @@
 
 SetupCaption=$BrandFullName 설치
 UninstallCaption=$BrandFullName 제거
-BackBtn=< 뒤로
-NextBtn=다음 >
-AcceptBtn=라이선스 계약의 조항에 동의합니다
-DontAcceptBtn=라이선스 계약의 조항에 동의하지 않습니다
-InstallBtn=설치
-UninstallBtn=제거
+BackBtn=< 뒤로(&B)
+NextBtn=다음(&N) >
+AcceptBtn=라이선스 계약의 조항에 동의합니다(&A)
+DontAcceptBtn=라이선스 계약의 조항에 동의하지 않습니다(&D)
+InstallBtn=설치(&I)
+UninstallBtn=제거(&U)
 CancelBtn=취소
-CloseBtn=닫기
-BrowseBtn=찾아보기…
-ShowDetailsBtn=상세 정보 보기
+CloseBtn=닫기(&C)
+BrowseBtn=찾아보기(&R)…
+ShowDetailsBtn=상세 정보 보기(&D)
 ClickNext=계속하려면 다음을 누르세요.
 ClickInstall=프로그램 설치를 시작하려면 설치 버튼을 누르세요.
 ClickUninstall=프로그램 제거를 시작하려면 제거 버튼을 누르세요.
