--- a/ko/toolkit/chrome/global/commonDialogs.properties
+++ b/ko/toolkit/chrome/global/commonDialogs.properties
@@ -15,11 +15,11 @@ PromptPassword3=비밀번호 필요 - %S
 Select=선택
 OK=확인
 Cancel=취소
-Yes=예
-No=아니오
-Save=저장
-Revert=복귀
-DontSave=저장 안 함
+Yes=예(&Y)
+No=아니오(&N)
+Save=저장(&S)
+Revert=되돌리기(&R)
+DontSave=저장 안 함(&N)
 ScriptDlgGenericHeading=[JavaScript 프로그램]
 ScriptDlgHeading=%S 페이지 정보:                                           
 ScriptDialogLabel=이 페이지에서 추가 대화 상자 생성 막기
