Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/toolkit/chrome/global/printdialog.properties
+++ b/ko/toolkit/chrome/global/printdialog.properties
@@ -27,11 +27,11 @@ printFramesTitleWindows=여백
 # On Mac, underscores will be stripped.
 
 asLaidOut=화면에 보이는 대로
-asLaidOutWindows=화면에 보이는 대로
+asLaidOutWindows=화면에 보이는 대로(&L)
 selectedFrame=선택한 프레임만
-selectedFrameWindows=선택한 프레임만
+selectedFrameWindows=선택한 프레임만(&F)
 separateFrames=각 프레임을 따로
-separateFramesWindows=각 프레임을 따로
+separateFramesWindows=각 프레임을 따로(&E)
 
 shrinkToFit=크기 무시하고 페이지 폭에 맞게 축소
 selectionOnly=선택한 내용만 인쇄
