--- a/ko/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/ko/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -38,7 +38,7 @@ noUsernamePlaceholder=사용자 이름 없음
 togglePasswordLabel=비밀번호 보기
 togglePasswordAccessKey2=h
 notNowButtonText = 나중에(&N)
-neverForSiteButtonText = 이 사이트는 저장 안 함
+neverForSiteButtonText = 이 사이트는 저장 안 함(&V)
 rememberButtonText = 기억하기(&R)
 passwordChangeTitle = 비밀번호 변경 확인
 # LOCALIZATION NOTE (updatePasswordMsg):
