Pontoon: Update Spanish (Chile) (es-CL) localization of Firefox Co-authored-by: ravmn <ravmn@ravmn.cl>

--- a/es-CL/browser/installer/custom.properties
+++ b/es-CL/browser/installer/custom.properties
@@ -61,6 +61,10 @@ UN_CONFIRM_PAGE_SUBTITLE=Quitar $BrandFullName del computador.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName será desinstalado de la siguiente ubicación:
 UN_CONFIRM_CLICK=Haz clic en Desinstalar para continuar.
 
+UN_REFRESH_PAGE_TITLE=¿Refrescar &brandShortName; en su lugar?
+UN_REFRESH_LEARN_MORE=&Aprender más
+UN_REFRESH_BUTTON=&Refrescar &brandShortName;
+
 BANNER_CHECK_EXISTING=Verificando instalación existente…
 
 STATUS_INSTALL_APP=Instalando $BrandShortName…
