--- a/es-CL/devtools/client/netmonitor.properties
+++ b/es-CL/devtools/client/netmonitor.properties
@@ -1126,9 +1126,9 @@ netmonitor.summary.learnMore=Aprender más sobre el código de estado
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Política de referencia:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Referente
+netmonitor.headers.referrerPolicy=Política de referencia
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
