--- a/ar/browser/chrome/browser/accounts.properties
+++ b/ar/browser/chrome/browser/accounts.properties
@@ -45,6 +45,7 @@ deviceConnDisconnTitle = حساب Firefox
 # Firefox account.
 # %S is the name of the new device; otherDeviceConnectedBody.noDeviceName is shown
 # instead of otherDeviceConnectedBody when the name is not known.
+otherDeviceConnectedBody.noDeviceName = صار هذا الحاسوب متصلًا الآن مع جهاز جديد.
 
 # LOCALIZATION NOTE (thisDeviceConnectedBody) - used in a notification shown
 # after a Firefox Account is connected to the current device.
@@ -136,6 +137,9 @@ singleTabArrivingWithTruncatedURL.body = %S…
 # LOCALIZATION NOTE (account.title):
 # Used as a default header for the FxA toolbar menu.
 account.title = الحساب
+
+# LOCALIZATION NOTE (account.accountSettings):
+# Used as the description below user's email in the FxA toolbar menu.
 
 # LOCALIZATION NOTE (account.finishAccountSetup):
 # Used as the FxA toolbar menu item value when user has not
