--- a/ar/devtools/client/debugger.properties
+++ b/ar/devtools/client/debugger.properties
@@ -55,6 +55,32 @@ setDirectoryRoot.accesskey=ذ
 removeDirectoryRoot.label=أزِل الدليل الجذر
 removeDirectoryRoot.accesskey=د
 
+# LOCALIZATION NOTE (blackBoxAll.label): Text associated with the blackbox context menu item
+
+# LOCALIZATION NOTE (blackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected group
+
+# LOCALIZATION NOTE (unblackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllInDir.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllInDir.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (blackBoxAllOutsideDir.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideDir.label: This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected directory
+
 # LOCALIZATION NOTE (copyFunction.label): This is the text that appears in the
 # context menu to copy the function the user selected
 copyFunction.label=انسخ الدالة
@@ -117,6 +143,7 @@ ignoreExceptionsItem=تجاهَل الاستثناءات
 
 # LOCALIZATION NOTE (pauseOnUncaughtExceptionsItem): The pause on exceptions dropdown
 # item shown when a user is adding a new breakpoint.
+pauseOnUncaughtExceptionsItem=ألبِث عن الاستثناءات غير المُلتقطة
 
 # LOCALIZATION NOTE (pauseOnExceptionsItem2): The pause on exceptions checkbox description
 # when the debugger will pause on all exceptions.
@@ -209,6 +236,7 @@ otherEvents=أخرى
 # LOCALIZATION NOTE (blackboxCheckboxTooltip2): The tooltip text to display when
 # the user hovers over the checkbox used to toggle blackboxing its associated
 # source.
+blackboxCheckboxTooltip2=فعّل/عطّل الصندوق الأسود
 
 # LOCALIZATION NOTE (eventListenersHeader1): The text to display in the events
 # header.
@@ -217,6 +245,7 @@ eventListenersHeader1=نقاط التوقف لمُستمعات الأحداث
 # LOCALIZATION NOTE (noDomMutationBreakpoints): The text to
 # display in the DOM Mutation Breakpoints pane when there are no events.
 # %S will be replaced by an active link using inspectorTool as text
+noDomMutationBreakpoints=انقر على العنصر باليمين في %S واختر ”توقّف عند…“ لإضافة نقطة توقف
 
 # LOCALIZATION NOTE (inspectorTool): The text to describe the the Inspector tool
 inspectorTool=الفاحِص
@@ -227,6 +256,7 @@ eventListenersHeader1.placeholder=رشّح حسب نوع الحدث
 
 # LOCALIZATION NOTE (domMutationHeader): The text to display in the
 # DOM Mutation Breakpoints header
+domMutationHeader=نقاط توقّف التعديل على DOM
 
 # LOCALIZATION NOTE (domMutationTypes.attribute): The text to display in the
 # DOM Mutation Breakpoints panel for an attribute change
@@ -635,6 +665,26 @@ downloadFile.accesskey=ن
 # LOCALIZATION NOTE (inlinePreview.hide.label): Context menu item
 # for hiding the inline preview block
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=لا خصائص
@@ -665,6 +715,7 @@ expressions.remove.tooltip=أزِل تعبير المراقبة
 
 # LOCALIZATION NOTE (xhrBreakpoints.header): The pause on any XHR breakpoints headings
 xhrBreakpoints.header=نقاط توقف XHR
+xhrBreakpoints.placeholder=توقّف حين يحتوي العنوان على
 xhrBreakpoints.label=أضِف نقطة توقف XHR
 
 # LOCALIZATION NOTE (xhrBreakpoints.item.label): message displayed when reaching a breakpoint for XHR requests. %S is replaced by the path provided as condition for the breakpoint.
@@ -672,8 +723,10 @@ xhrBreakpoints.item.label=يحتوي المسار على ”%S“
 
 # LOCALIZATION NOTE (pauseOnAnyXHR): The pause on any XHR checkbox description
 # when the debugger will pause on any XHR requests.
+pauseOnAnyXHR=توقّف عند أيّ عنوان
 
 # LOCALIZATION NOTE (watchpoints.submenu): This is the text for the watchpoints sub-menu.
+watchpoints.submenu=توقّف عند…
 
 # LOCALIZATION NOTE (watchpoints.getWatchpoint): This is the text that appears in the
 # watchpoints sub-menu to add a "get" watchpoint on an object property.
@@ -682,6 +735,9 @@ watchpoints.getWatchpoint=جلب خاصية
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=ضبط خاصية
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
@@ -744,9 +800,11 @@ sourceFooter.mappedSource=(من %S)
 
 # LOCALIZATION NOTE (sourceFooter.mappedSourceTooltip): Tooltip text associated
 # with a mapped source. %S is replaced by the source map origin.
+sourceFooter.mappedSourceTooltip=(رُبط المصدر من %S)
 
 # LOCALIZATION NOTE (sourceFooter.mappedSuffix): Text associated
 # with a mapped source.  Displays next to URLs in tree and tabs.
+sourceFooter.mappedSuffix=(رُبط)
 
 # LOCALIZATION NOTE (sourceFooter.codeCoverage): Text associated
 # with a code coverage button
@@ -1018,10 +1076,6 @@ whyPaused.mutationBreakpointRemoved=أُزيلت:
 # in a info block explaining how the debugger is currently paused at
 # a JS execution
 whyPaused.interrupted=أُلبث عند استثناء
-
-# LOCALIZATION NOTE (whyPaused.replayForcedPause): The text that is displayed
-# in a info block explaining how the debugger is currently paused in a
-# recording.
 
 # LOCALIZATION NOTE (whyPaused.resumeLimit): The text that is displayed
 # in a info block explaining how the debugger is currently paused while stepping
