--- a/zh-TW/dom/chrome/dom/dom.properties
+++ b/zh-TW/dom/chrome/dom/dom.properties
@@ -20,7 +20,7 @@ DontAskAgain=不要再問我
 JSURLLoadBlockedWarning=安全管理員不允許從其他主機載入\n正在視窗顯示資料的主機的 javascript: URL。
 WindowCloseBlockedWarning=Script 無法關閉非由 Script 開啟的視窗。
 OnBeforeUnloadTitle=您確定嗎？
-OnBeforeUnloadMessage=此頁面正在詢問您是否要離開 - 您所輸入的資料可能還沒儲存。
+OnBeforeUnloadMessage=您確定要離開此網頁嗎？輸入的資料可能還沒儲存完成。
 OnBeforeUnloadStayButton=留在此頁
 OnBeforeUnloadLeaveButton=離開頁面
 UnexpectedCanvasVariantStyle=canvas: 嘗試將 strokeStyle 或 fillStyle 的值設定成非字串、CanvasGradient，或已忽略 CanvasPattern。
