Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/browser/installer/custom.properties
+++ b/nn-NO/browser/installer/custom.properties
@@ -61,6 +61,8 @@ UN_CONFIRM_PAGE_SUBTITLE=Fjern $BrandFullName frå datamaskina di.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName frå følgjande mappe:
 UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsetje.
 
+UN_REFRESH_PAGE_TITLE=Tilbakestille $BrandShortName i staden?
+
 BANNER_CHECK_EXISTING=Kontrollerer installasjonen…
 
 STATUS_INSTALL_APP=Installerer $BrandShortName…
