Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/browser/installer/custom.properties
+++ b/nn-NO/browser/installer/custom.properties
@@ -62,6 +62,7 @@ UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName frå følgjande mappe:
 UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsetje.
 
 UN_REFRESH_PAGE_TITLE=Tilbakestille $BrandShortName i staden?
+UN_REFRESH_LEARN_MORE=&Les meir
 
 BANNER_CHECK_EXISTING=Kontrollerer installasjonen…
 
