[S] dom: Bug 1636515 - Handle cycle in media element when it is fed with the captured stream

--- a/it/dom/chrome/dom/dom.properties
+++ b/it/dom/chrome/dom/dom.properties
@@ -89,6 +89,7 @@ MediaElementAudioSourceNodeCrossOrigin = L’elemento HTMLMediaElement trasmesso
 MediaStreamAudioSourceNodeCrossOrigin = L’elemento MediaStream trasmesso a createMediaStreamSource contiene una risorsa cross-origin, il nodo genererà silenzio.
 MediaStreamTrackAudioSourceNodeCrossOrigin = L’elemento MediaStreamTrack trasmesso a createMediaStreamTrackSource è una risorsa cross-origin, il nodo genererà silenzio.
 MediaElementAudioCaptureOfMediaStreamError = L’elemento HTMLMediaElement catturato sta eseguendo un MediaStream. Impostare il volume o disattivare l’audio non è attualmente supportato.
+MediaElementStreamCaptureCycle = Assegnamento ignorato in quanto il MediaStream assegnato a srcObject viene dalla cattura di questo HTMLMediaElement, formando un ciclo.
 MediaLoadExhaustedCandidates = Caricamento non riuscito per tutte le risorse candidate. Sospeso caricamento risorsa multimediale.
 MediaLoadSourceMissingSrc = L’elemento <source> non ha un attributo “src”. Impossibile completare il caricamento della risorsa multimediale.
 MediaStreamAudioSourceNodeDifferentRate = La connessione di AudioNode da AudioContext con diverse frequenze di campionamento non è attualmente supportata.
