--- a/nn-NO/dom/chrome/security/security.properties
+++ b/nn-NO/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Denne nettstaden brukar krypteringsmetoden RC4 for krypte
 
 DeprecatedTLSVersion=Denne nettsida brukar ein forelda versjon av TLS som vil bli deaktiveret i mars 2020. Oppgrader til TLS 1.2 eller 1.3.
 
+DeprecatedTLSVersion2=Denne nettstaden brukar ein utdatert versjon av TLS. Oppgrader til TLS 1.2 eller 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Resursen frå «%1$S» vart blokkert på grunn av feil MIME-type («%2$S») (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Funksjonspolicy: Hoppar over ikkje-støtta løyve
 ReferrerLengthOverLimitation=HTTP Referrer header: Lengda er over grensa på «%1$S» byte - reduserer referrer header ned til opphav: «%2$S»
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=HTTP Referrer header: Lengda for opphav innen referrer er over grensa på «%1$S» byte - fjernar referrer med opphav: «%2$S».
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Ugyldig X-Frame-Options: «%1$S» header frå «%2$S» lasta inn i «%3$S».
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Lasting nekta av X-Frame-Options: «%1$S» fra «%2$S», nettstaden tillèt ikkje innramming. Prøvde å laste inn «%3$S».
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Lasting nekta av X-Frame-Options: «%1$S» frå «%2$S», nettstaden tillèt ikkje kryss-opphav innramming frå «%3$S».
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
