Pontoon: Update Dutch (nl) localization of Firefox Co-authored-by: Mark Heijl <markh@babelzilla.org> Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/nl/browser/installer/custom.properties
+++ b/nl/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=In mijn &werkbalk Snel starten
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName moet worden afgesloten om door te gaan met de installatie.\n\nSluit $BrandShortName om door te gaan.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName moet worden afgesloten om door te gaan met de de-installatie.\n\nSluit $BrandShortName om door te gaan.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName is al actief.\n\nSluit $BrandShortName voor het starten van de versie die u zojuist hebt geïnstalleerd.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$BrandShortName moet worden afgesloten om door te gaan met opfrissen.\n\nSluit $BrandShortName om door te gaan.
 WARN_WRITE_ACCESS=U hebt geen schrijftoegang tot de installatiemap.\n\nKlik op OK om een andere map te selecteren.
 WARN_DISK_SPACE=U hebt niet genoeg schijfruimte om op deze locatie te installeren.\n\nKlik op OK om een andere locatie te selecteren.
 WARN_MIN_SUPPORTED_OSVER_MSG=Sorry, $BrandShortName kan niet worden geïnstalleerd. Deze versie van $BrandShortName vereist ${MinSupportedVer} of nieuwer. Klik op de knop OK voor meer informatie.
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=$BrandFullName de-installeren
 UN_CONFIRM_PAGE_SUBTITLE=$BrandFullName van uw computer verwijderen.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName zal worden gede-installeerd van de volgende locatie:
 UN_CONFIRM_CLICK=Klik op De-installeren om door te gaan.
+
+UN_REFRESH_PAGE_TITLE=In plaats daarvan $BrandShortName opfrissen?
+UN_REFRESH_PAGE_EXPLANATION=Als u problemen met $BrandShortName ondervindt, dan kan opfrissen helpen.\n\nHierdoor worden de standaardinstellingen teruggezet en add-ons verwijderd. Maak een frisse start voor optimale prestaties.
+UN_REFRESH_LEARN_MORE=&Meer info
+UN_REFRESH_BUTTON=&$BrandShortName verversen
 
 BANNER_CHECK_EXISTING=Bestaande installatie controleren…
 
