--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Deze website maakt gebruik van de codering RC4 voor versl
 
 DeprecatedTLSVersion=Deze website maakt gebruik van een niet meer ondersteunde versie van TLS die in maart 2020 zal worden uitgeschakeld. Voer een upgrade uit naar TLS 1.2 of 1.3.
 
+DeprecatedTLSVersion2=Deze website gebruikt een verouderde versie van TLS. Upgrade naar TLS 1.2 of 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=De bron van ‘%1$S’ is geblokkeerd vanwege een niet-overeenkomend MIME-type (‘%2$S’) (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Functiebeleid: niet-ondersteunde toestemmingswaar
 ReferrerLengthOverLimitation=HTTP Referrer header: De lengte is groter dan de limiet van ‘%1$S’ bytes – referrer header wordt teruggebracht tot het origineel: ‘%2$S’
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=HTTP Referrer header: De lengte van het origineel in de referrer is groter dan de limiet van ‘%1$S’ bytes – referrer met oorsprong ‘%2$S’ wordt verwijderd.
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Ongeldige X-Frame-opties: kop ‘%1$S’ van ‘%2$S’ geladen in ‘%3$S’.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Laden door X-Frame-Options geweigerd: ‘%1$S’ van ‘%2$S’, website staat framing niet toe. Poging om te laden in ‘%3$S’.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Laden door X-Frame-Options geweigerd: ‘%1$S’ van ‘%2$S’, website staat cross-origin-framing van ‘%3$S’ niet toe.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
