Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/browser/installer/custom.properties
+++ b/fy-NL/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=Yn myn &Fluchstartbalke
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName moat ôfsluten wurde om troch te gean mei de ynstallaasje.\n\nSlút $BrandShortName om troch te gean.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName moat ôfsluten wurde om troch te gean mei de de-ynstallaasje.\n\nSlút $BrandShortName om troch te gean.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName is al aktyf.\n\nSlút $BrandShortName foar it starten fan de ferzje dy't jo sa krekt ynstallearre hawwe.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$BrandShortName moat ôfsluten wurde om troch te gean mei opfrissen.\n\nSlút $BrandShortName om troch te gean.
 WARN_WRITE_ACCESS=Jo hawwe gjin tagong om te skriuwen yn de ynstallaasjemap.\n\nKlik OK om in oare map te selektearjen.
 WARN_DISK_SPACE=Jo hawwe net genôch skiifromte om op dizze lokaasje te ynstallearjen.\n\nKlik OK om in oare lokaasje te selektearjen.
 WARN_MIN_SUPPORTED_OSVER_MSG=Sorry, $BrandShortName kin net ynstallearre wurde. Dizze ferzje fan $BrandShortName hat ${MinSupportedVer} of nijer nedich. Klik OK foar mear ynformaasje.
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=$BrandFullName de-ynstallearje
 UN_CONFIRM_PAGE_SUBTITLE=$BrandFullName fuortsmite fan jo kompjûter.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName wurdt de-ynstallearre fan de folgjende lokaasje:
 UN_CONFIRM_CLICK=Klik De-ynstallearje om troch te gean.
+
+UN_REFRESH_PAGE_TITLE=Yn stee dêrfan $BrandShortName opfrisse?
+UN_REFRESH_PAGE_EXPLANATION=As jo problemen mei $BrandShortName ûnderfine, dan kin opfrisse helpe.\n\nHjirtroch wurde de standetdynstellingen weromset en add-ons fuortsmiten. Meitsje in farske start foar optimale prestaasjes.
+UN_REFRESH_LEARN_MORE=&Mear ynfo
+UN_REFRESH_BUTTON=&$BrandShortName ferfarskje
 
 BANNER_CHECK_EXISTING=Besteande ynstallaasje kontrolearje…
 
