--- a/fy-NL/devtools/client/netmonitor.properties
+++ b/fy-NL/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=Utjûn troch
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=Perioade fan jildichheid
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=Ferrint op:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=Fingerôfdrukken
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=Boarne blokkearje wannear URL befett
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=Patroan fuortsmite
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=Patroan tafoegje
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 netmonitor.actionbar.requestBlockingUsageNotice=Foegje hjir URL-patroanen ta om oerienkommende fersiken te blokkearjen.
@@ -1130,9 +1126,9 @@ netmonitor.summary.learnMore=Mear ynfo oer steatkoade
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Referrer-belied:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Referrer
+netmonitor.headers.referrerPolicy=Referrer-belied
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
