Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/preferences/preferences.properties
+++ b/ko/browser/chrome/browser/preferences/preferences.properties
@@ -20,7 +20,7 @@ useOtherApp=다른 프로그램 사용…
 fpTitleChooseApp=도우미 응용 프로그램 선택
 manageApp=응용 프로그램 세부사항…
 alwaysAsk=항상 물어 보기
-portableDocumentFormat=PDF 문서(PDF)
+portableDocumentFormat=Portable Document Format (PDF)
 
 # LOCALIZATION NOTE (usePluginIn):
 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
