Pontoon: Update Serbian (sr) localization of Firefox Co-authored-by: Isidora Jukić <barad.dur@yahoo.com>

--- a/sr/devtools/client/accessibility.properties
+++ b/sr/devtools/client/accessibility.properties
@@ -248,7 +248,7 @@ accessibility.progress.initializing=Initializing…
 # accessibility panel overlay shown when accessibility audit is running showing
 # the number of nodes being audited. Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-accessibility.progress.progressbar=Checking #1 node;Checking #1 nodes
+accessibility.progress.progressbar=Провера #1 чвора; Провера #1 чвора; Провера #1 чворова
 
 # LOCALIZATION NOTE (accessibility.progress.finishing): A title text for the
 # accessibility panel overlay shown when accessibility audit is finishing up.
@@ -299,4 +299,3 @@ accessibility.simulation=Симулирај:
 # in the "Simulate" menu in the accessibility panel and represent the contrast loss simulation option.
 # It is also shown in the simulation menu button in the accessibility panel and represent the
 # contrast loss simulation option currently selected.
-
