--- a/sr/browser/installer/custom.properties
+++ b/sr/browser/installer/custom.properties
@@ -19,7 +19,7 @@
 # from en-US contains a \n.
 
 REG_APP_DESC=$BrandShortName омогућава лако и безбедно сурфовање интернетом. Познат кориснички интерфејс, побољшане безбедносне мере укључујућу заштиту од крађе идентитета на мрежи и интегрисана претрага омогућавају да извучете максимум из интернета.
-CONTEXT_OPTIONS=$BrandShortName поставке
+CONTEXT_OPTIONS=$BrandShortName опције
 CONTEXT_SAFE_MODE=$BrandShortName безбедни режим
 OPTIONS_PAGE_TITLE=Врста инсталације
 OPTIONS_PAGE_SUBTITLE=Избор опција при инсталацији
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=На траци за брзо покретање
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName мора да буде искључен да би се инсталација наставила.\n\nИскључите $BrandShortName како бисте наставили.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName мора да буде искључен да би се деинсталација наставила.\n\nИскључите $BrandShortName како бисте наставили.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName је већ покренут.\n\nИскључите програм $BrandShortName пре него што покренете издање које сте управо инсталирали.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$BrandShortName мора да буде затворен да наставите с освеживањем.\n\nЗатворите $BrandShortName да бисте наставили.
 WARN_WRITE_ACCESS=Немате овлашћења да уписујете у инсталациону фасциклу.\n\nКликните на „У реду“ да бисте изабрали другу фасциклу.
 WARN_DISK_SPACE=Нема довољно простора на диску за инсталацију на овој локацији.\n\nПритисните "У реду" да изаберете другу локацију.
 WARN_MIN_SUPPORTED_OSVER_MSG=Жао нам је, $BrandShortName не може да се инсталира. Ова $BrandShortName верзија захтева ${MinSupportedVer} или новије. Кликните на дугме "У реду" за више информација.
@@ -60,6 +61,8 @@ UN_CONFIRM_PAGE_TITLE=Деинсталација програма $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Уклањање програма $BrandFullName са рачунара.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName ће бити деинсталиран са ове локације:
 UN_CONFIRM_CLICK=Притисните „Деинсталирај‟ како бисте наставили
+
+UN_REFRESH_PAGE_TITLE=Освежите $BrandShortName уместо?
 
 BANNER_CHECK_EXISTING=Провера постојеће инсталације…
 
