Pontoon: Update Vietnamese (vi) localization of Firefox Co-authored-by: Quế Tùng <best.cloney.1301@gmail.com>

--- a/vi/browser/installer/custom.properties
+++ b/vi/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=Trong thanh &Quick Launch
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName phải được đóng trước khi tiến hành cài đặt.\n\nVui lòng đóng $BrandShortName để tiếp tục.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName phải được đóng trước khi tiến hành gỡ bỏ.\n\nVui lòng đóng $BrandShortName để tiếp tục.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName đang chạy.\n\nVui lòng đóng $BrandShortName trước khi chạy phiên bản bạn vừa mới cài đặt.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$BrandShortName phải được đóng trước khi tiến hành làm mới.\n\nVui lòng đóng $BrandShortName để tiếp tục.
 WARN_WRITE_ACCESS=Bạn không có quyền ghi vào thư mục cài đặt.\n\nNhấn OK để chọn thư mục khác.
 WARN_DISK_SPACE=Bạn không có đủ dung lượng đĩa để cài vào thư mục này.\n\nNhấn OK để chọn thư mục khác.
 WARN_MIN_SUPPORTED_OSVER_MSG=Xin lỗi, $BrandShortName không thể cài đặt. Phiên bản này của $BrandShortName yêu cầu ${MinSupportedVer} hoặc mới hơn. Hãy nhấn nút OK để biết thêm thông tin.
@@ -60,6 +61,11 @@ UN_CONFIRM_PAGE_TITLE=Gỡ bỏ $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Gỡ bỏ $BrandFullName từ máy tính của bạn.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName sẽ được gỡ bỏ từ thư mục sau:
 UN_CONFIRM_CLICK=Nhấn “Gỡ bỏ” để tiếp tục.
+
+UN_REFRESH_PAGE_TITLE=Thay vào đó, làm mới $BrandShortName?
+UN_REFRESH_PAGE_EXPLANATION=Nếu bạn gặp sự cố với $BrandShortName, việc làm mới có thể giúp ích.\n\nĐiều này sẽ khôi phục cài đặt mặc định và xóa tiện ích mở rộng. Bắt đầu mới cho hiệu suất tối ưu.
+UN_REFRESH_LEARN_MORE=&Tìm hiểu thêm
+UN_REFRESH_BUTTON=&Làm mới $BrandShortName
 
 BANNER_CHECK_EXISTING=Đang kiểm tra phiên bản…
 
