--- a/vi/devtools/client/webconsole.properties
+++ b/vi/devtools/client/webconsole.properties
@@ -566,6 +566,10 @@ webconsole.input.editor.onboarding.label=Lặp lại mã của bạn nhanh hơn 
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=Đã hiểu!
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=Đã hiểu!
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
