--- a/vi/dom/chrome/security/security.properties
+++ b/vi/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Trang web này sử dụng mật mã RC4 để mã hóa, 
 
 DeprecatedTLSVersion=Trang web này sử dụng phiên bản TLS không còn được sử dụng nữa và sẽ bị vô hiệu hóa vào tháng 3 năm 2020. Vui lòng nâng cấp lên TLS 1.2 hoặc 1.3.
 
+DeprecatedTLSVersion2=Trang web này sử dụng phiên bản TLS không dùng nữa. Vui lòng nâng cấp lên TLS 1.2 hoặc 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Tài nguyên từ “%1$S” bị chặn do kiểu MIME (“%2$S”) không khớp (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Chính sách tính năng: Bỏ qua giá trị cho
 ReferrerLengthOverLimitation=Tiêu đề giới thiệu HTTP: Độ dài vượt quá giới hạn“%1$S” byte - sẽ tách đầu giới thiệu làm gốc: “%2$S”
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=Tiêu đề giới thiệu HTTP: Độ dài của nguồn gốc trong giới thiệu vượt quá giới hạn “%1$S” byte - sẽ loại bỏ giới thiệu với nguồn gốc “%2$S”.
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = X-Frame-Options không hợp lệ: giá trị “%1$S” từ “%2$S” được tải vào trong “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Việc tải bị từ chối bởi X-Frame-Options: giá trị “%1$S” từ “%2$S”, trang không cho phép bất kỳ khung nào. Đã cố tải vào trong “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Việc tải bị từ chối bởi X-Frame-Options: giá trị “%1$S” từ “%2$S”, trang không cho phép khung cross-origin từ “%3$S”.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
