Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/browser/chrome/browser/tabbrowser.properties
+++ b/nb-NO/browser/chrome/browser/tabbrowser.properties
@@ -38,7 +38,6 @@ tabs.closeWarningPromptMe=Advar når jeg lukker flere faner
 # of tabs in these windows.
 # Note that every one of these plural forms must contain one instance of '%S'.
 tabs.closeWarningMultipleWindows=;Du er i ferd med å lukke #1 vindu %S. Er du sikker på at du vil fortsette?
-
 # LOCALIZATION NOTE (tabs.closeWarningMultipleWindowsSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -131,3 +130,7 @@ tabs.openWarningTitle=Bekreft åpning
 tabs.openWarningMultipleBranded=Du åpner nå %S faner.  Dette kan gjøre at %S bruker lang tid på å laste sidene.  Er du sikker på at du vil fortsette?
 tabs.openButtonMultiple=Åpne faner
 tabs.openWarningPromptMeBranded=Advar når åpning av flere faner kan gjøre %S treg
+
+browsewithcaret.checkMsg=Ikke vis denne dialogen igjen.
+browsewithcaret.checkWindowTitle=Nettlesing med tekstvelger
+browsewithcaret.checkLabel=Nettlesing med tekstvelger kan slås på eller av med F7. Denne funksjonen gjør at du kan merke tekst med tastaturet ved hjelp av en flyttbar markør. Vil du slå på nettlesing med tekstvelger?
