Pontoon: Update Assamese (as) localization of Firefox Co-authored-by: Mohsin Ali <mohsin13089@gmail.com>

--- a/as/toolkit/chrome/global/contentAreaCommands.properties
+++ b/as/toolkit/chrome/global/contentAreaCommands.properties
@@ -5,6 +5,7 @@
 # context menu strings
 
 SaveImageTitle=ছবি সংৰক্ষণ কৰক
+SaveMediaTitle=মিডিয়া সঞ্চয় কৰক
 SaveVideoTitle=ভিডিঅ' সংৰক্ষণ কৰক
 SaveAudioTitle=অ'ডিঅ' সংৰক্ষণ কৰক
 SaveLinkTitle=এই ধৰণে সংৰক্ষণ কৰক
