--- a/as/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/as/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,3 +17,4 @@ unknownCancel.label=বাতিল কৰক
 fileType=%S ফাইল
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
+pdfHandlerDescription=পৰ্টেবল ডকুমেণ্ট ফৰ্মেট
