Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/dom/chrome/dom/dom.properties
+++ b/nb-NO/dom/chrome/dom/dom.properties
@@ -113,6 +113,7 @@ MediaStreamAudioSourceNodeCrossOrigin=Mediastream sendt til createMediaStreamSou
 MediaStreamTrackAudioSourceNodeCrossOrigin=MediaStreamTrack, som ble sendt til createMediaStreamTrackSource benytter et fremmed nettsted som kilde, der noden ikke vil sende noe.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=Den oppfangede HTMLMediaElement spiller en MediaStream. Endring av status for lydstyrke eller demping av lyd er ikke støttet for øyeblikket.
+# LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaLoadExhaustedCandidates=Klarte ikke laste noen av kandidatressursene. Medialasting satt i pause.
 MediaLoadSourceMissingSrc=<source>-elementet har ingen «src»-attributt. Medialasting feilet.
 MediaStreamAudioSourceNodeDifferentRate=Kobling av AudioNodes fra AudioContexts med forskjellig samplingsrate støttes for øyeblikket ikke.
@@ -382,6 +383,9 @@ AllEntryTypesIgnored=Ingen gyldige entryTypes; avbryter registrering.
 # LOCALIZATION NOTE: do not localize key=“%S” modifiers=“%S” id=“%S”
 GTK2Conflict2=Tastehendelsen ikke tilgjengelig på GTK2: key=“%S” modifiers=“%S” id=“%S”
 WinConflict2=Tastehendelsen finnes ikke i visse tastaturoppsett: key=“%S” modifiers=“%S” id=“%S”
+
+# LOCALIZATION NOTE: do not trnaslated "document.domain"
+DocumentSetDomainNotAllowedWarning=Det er ikke tillatt å angi document.domain i kryssende-opprinnelse-isolerte omgivelser.
 
 #LOCALIZATION NOTE(DeprecatedTestingInterfaceWarning): Do not translate this message. It's just testing only.
 DeprecatedTestingInterfaceWarning=TestingDeprecatedInterface er et grensesnitt kun for testing, og dette er testforeldelsesmeldingen.
