Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/dom/chrome/dom/dom.properties
+++ b/nb-NO/dom/chrome/dom/dom.properties
@@ -114,6 +114,7 @@ MediaStreamTrackAudioSourceNodeCrossOrigin=MediaStreamTrack, som ble sendt til c
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=Den oppfangede HTMLMediaElement spiller en MediaStream. Endring av status for lydstyrke eller demping av lyd er ikke støttet for øyeblikket.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
+MediaElementStreamCaptureCycle=MediaStream som er tilordnet srcObject kommer fra en fangst av dette HTMLMediaElement, og danner en syklus, oppgave ignorert.
 MediaLoadExhaustedCandidates=Klarte ikke laste noen av kandidatressursene. Medialasting satt i pause.
 MediaLoadSourceMissingSrc=<source>-elementet har ingen «src»-attributt. Medialasting feilet.
 MediaStreamAudioSourceNodeDifferentRate=Kobling av AudioNodes fra AudioContexts med forskjellig samplingsrate støttes for øyeblikket ikke.
