Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/chrome/browser/activity-stream/newtab.properties
+++ b/hr/browser/chrome/browser/activity-stream/newtab.properties
@@ -90,7 +90,7 @@ section_disclaimer_topstories_buttontext=U redu, razumijem
 # sidebar mozilla-central string for the panel that has preferences related to
 # what is shown for the homepage, new windows, and new tabs.
 prefs_home_header=Firefox početni sadržaj
-prefs_home_description=Odaberi sadržaj koji želiš imati na tvojoj Firefox početnoj stranici.
+prefs_home_description=Odaberi sadržaj koji želiš na početnoj stranici Firefoxa.
 
 prefs_content_discovery_description=Otkrivanje sadržaja u Firefox početnoj stranici pomaže vam u otkrivanju visoko kvalitenih, relevantnih članaka diljem interneta.
 
