Pontoon: Update Spanish (Argentina) (es-AR) localization of Firefox Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/browser/chrome/browser/tabbrowser.properties
+++ b/es-AR/browser/chrome/browser/tabbrowser.properties
@@ -38,7 +38,6 @@ tabs.closeWarningPromptMe=Avisarme cuando cierre múltiples pestañas
 # of tabs in these windows.
 # Note that every one of these plural forms must contain one instance of '%S'.
 tabs.closeWarningMultipleWindows=;Está por cerrar #1 ventanas %S. ¿Está seguro de que quiere continuar?
-
 # LOCALIZATION NOTE (tabs.closeWarningMultipleWindowsSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -131,3 +130,7 @@ tabs.openWarningTitle=Confirmar apertura
 tabs.openWarningMultipleBranded=Está por abrir %S pestañas.  Ésto puede hacer que %S funcione mucho más lento mientras las páginas se cargan.  ¿Está seguro de querer continuar?
 tabs.openButtonMultiple=Abrir pestañas
 tabs.openWarningPromptMeBranded=Avisarme cuando abrir demasiadas pestañas pueda hacer más lento a %S
+
+browsewithcaret.checkMsg=No mostrar este diálogo de nuevo.
+browsewithcaret.checkWindowTitle=Navegación con cursor
+browsewithcaret.checkLabel=Presionar F7 habilita o deshabilita la navegación con cursor. Esta función coloca un cursor móvil en las páginas web, permitiéndole seleccionar texto con el teclado. ¿Quiere habilitar la navegación con cursor?
