Pontoon: Update Spanish (Argentina) (es-AR) localization of Firefox Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/browser/installer/custom.properties
+++ b/es-AR/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=En mi barra de &Inicio Rápido
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName debe cerrarse para proceder con la instalación.\n\nCierre $BrandShortName para continuar.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName debe cerrarse para proceder con la instalación.\n\nCierre $BrandShortName para continuar.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName se está ejecutando.\n\nCierre $BrandShortName previo a iniciar la versión que acaba de instalar.
+WARN_MANUALLY_CLOSE_APP_REFRESH=$ BrandShortName debe estar cerrado para continuar. \n\nCierre $BrandShortName para continuar.
 WARN_WRITE_ACCESS=No tiene acceso al directorio de instalación .\n\nHaga clic en Aceptar para seleccionar un directorio diferente OK to select a different directory.
 WARN_DISK_SPACE=No tiene estpacio suficiente para instalar en esta ubicación.\n\nHaga clic en Aceptar para seleccionar una ubicación diferente.
 WARN_MIN_SUPPORTED_OSVER_MSG=Lo sentimos, $BrandShortName no se puede instalar. Esta versión de $BrandShortName requiere ${MinSupportedVer} o superior. Haga clic en el botón Aceptar para más información.
@@ -60,6 +61,7 @@ UN_CONFIRM_PAGE_TITLE=Desinstalar $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Eliminar $BrandFullName de su computadora.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName se desinstalará de la siguiente ubicación:
 UN_CONFIRM_CLICK=Haga clic en Desinstalar para continuar.
+
 
 BANNER_CHECK_EXISTING=Verificando instalación existente…
 
