Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/toolkit/chrome/global/viewSource.properties
+++ b/ko/toolkit/chrome/global/viewSource.properties
@@ -12,5 +12,5 @@ viewSelectionSourceTitle = 선택 영역의 DOM 소스
 
 context_goToLine_label        = 줄 이동…
 context_goToLine_accesskey    = L
-context_wrapLongLines_label   = 긴 줄 줄바꿈
+context_wrapLongLines_label   = 자동 줄 바꿈
 context_highlightSyntax_label = 구문 강조
