--- a/ko/browser/chrome/browser/tabbrowser.properties
+++ b/ko/browser/chrome/browser/tabbrowser.properties
@@ -130,3 +130,6 @@ tabs.openWarningTitle=열기 확인
 tabs.openWarningMultipleBranded=지금 %S 탭을 열려고 합니다.  페이지를 여는 동안 %S가 느려질 수도 있습니다.  계속 하시겠습니까?
 tabs.openButtonMultiple=탭 열기
 tabs.openWarningPromptMeBranded=%S가 느려질 수 있는 여러 개의 탭 열기 경고
+
+browsewithcaret.checkMsg=이 대화 상자를 다시 표시하지 않음.
+browsewithcaret.checkWindowTitle=커서 브라우징
