--- a/ko/toolkit/chrome/global/browser.properties
+++ b/ko/toolkit/chrome/global/browser.properties
@@ -3,11 +3,11 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 browsewithcaret.checkMsg=이 대화 상자를 다시 표시하지 않음.
-browsewithcaret.checkWindowTitle=캐럿 기능 이용
+browsewithcaret.checkWindowTitle=커서 브라우징
 browsewithcaret.checkLabel=F7을 눌러 캐럿 기능을 켜거나 끌 수 있습니다. 이 기능을 이용하면 웹 페이지 내에서 커서를 키보드로 이동할 수 있습니다. 캐럿 기능을 사용하시겠습니까?
 browsewithcaret.checkButtonLabel=예
 
-plainText.wordWrap=긴 줄을 행바꿈
+plainText.wordWrap=자동 줄 바꿈
 
 formPostSecureToInsecureWarning.title = 보안 경고
 formPostSecureToInsecureWarning.message = 이 연결은 보안되지 않았으며 입력된 값은 제 3자가 읽을 수도 있습니다.\n\n이 정보를 전송하시겠습니까?
