Pontoon: Update Spanish (Argentina) (es-AR) localization of Firefox Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/dom/chrome/dom/dom.properties
+++ b/es-AR/dom/chrome/dom/dom.properties
@@ -113,6 +113,8 @@ MediaStreamAudioSourceNodeCrossOrigin=HTMLMediaElement pasado a createMediaEleme
 MediaStreamTrackAudioSourceNodeCrossOrigin=El MediaStreamTrack pasado a createMediaStreamTrackSource es un recurso cross-origin, el nodo emitirá silencio.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=El HTMLMediaElement capturado reproduce un MediaStream. No se admiten cambios de volumen ni el silencio.
+# LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
+MediaElementStreamCaptureCycle=El MediaStream asignado a srcObject proviene de una captura de este HTMLMediaElement, formando un ciclo, asignación ignorada.
 MediaLoadExhaustedCandidates=Todos los recursos candidatos fallaron al cargarse. Carga de medio pausada.
 MediaLoadSourceMissingSrc=Elemento <source> no tiene atributo"src". Recurso de medios no pudo cargarse.
 MediaStreamAudioSourceNodeDifferentRate=Por el momento no se admite la conexión AudioNodes de AudioContexts con una tasa de muestreo diferente.
@@ -382,6 +384,9 @@ AllEntryTypesIgnored=No hay entryTypes válidos; abortando registro.
 # LOCALIZATION NOTE: do not localize key=“%S” modifiers=“%S” id=“%S”
 GTK2Conflict2=Evento clave no disponible en GTK2: clave="%S" modificadores="%S"id=“%S”
 WinConflict2=Evento clave no disponible en algunas disposiciones del teclado: clave=“%S” modificadores=“%S” id=“%S”
+
+# LOCALIZATION NOTE: do not trnaslated "document.domain"
+DocumentSetDomainNotAllowedWarning=No se permite establecer document.domain en un entorno aislado de origen cruzado.
 
 #LOCALIZATION NOTE(DeprecatedTestingInterfaceWarning): Do not translate this message. It's just testing only.
 DeprecatedTestingInterfaceWarning=TestingDeprecatedInterface es una interfaz de prueba solamente y este es su mensaje de prueba de la falta de compatibilidad.
