--- a/es-AR/browser/installer/custom.properties
+++ b/es-AR/browser/installer/custom.properties
@@ -62,6 +62,10 @@ UN_CONFIRM_PAGE_SUBTITLE=Eliminar $BrandFullName de su computadora.
 UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName se desinstalará de la siguiente ubicación:
 UN_CONFIRM_CLICK=Haga clic en Desinstalar para continuar.
 
+UN_REFRESH_PAGE_TITLE=¿Actualizar $BrandShortNameen su lugar?
+UN_REFRESH_PAGE_EXPLANATION=Si tiene problemas con $BrandShortName, una actualización puede ayudar. \n\nEsto va a restaurar la configuración predeterminada y eliminará los complementos. Comience de nuevo para un rendimiento óptimo.
+UN_REFRESH_LEARN_MORE=&Conocer más
+UN_REFRESH_BUTTON=&Actualizar $BrandShortName
 
 BANNER_CHECK_EXISTING=Verificando instalación existente…
 
