--- a/es-AR/dom/chrome/security/security.properties
+++ b/es-AR/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Este sitio usa para el cifrado RC4, que es obsoleto e ins
 
 DeprecatedTLSVersion=Este sitio utiliza una versión obsoleta de TLS que se desactivará en marzo de 2020. Por favor actualice a TLS 1.2 o 1.3.
 
+DeprecatedTLSVersion2=Este sitio utiliza una versión obsoleta de TLS. Actualice a TLS 1.2 o 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=El recurso de “%1$S” se bloqueó debido a la falta de coincidencia del tipo MIME (“%2$S”) (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Feature Policy: Saltándose el valor permitido no
 ReferrerLengthOverLimitation=En el encabezado de referencia de HTTP: la longitud supera el límite de bytes de “%1$S”, eliminando el encabezado de referencia hasta el origen: “%2$S”
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=En el encabezado de referencia de HTTP: la longitud supera el límite de bytes de “%1$S”, eliminando el encabezado de referencia hasta el origen: "%2$S".
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Opciones de marco X inválidas: encabezado “%1$S” de “%2$S” cargado en “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Carga denegada por X-Frame-Options: “%1$S” de “%2$S”, el sitio no permite ningún encuadre. Se intentó cargar en “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Carga denegada por X-Frame-Options: “%1$S” de “%2$S”, el sitio no permite ningún encuadre. Se intentó cargar en “%3$S”.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
