Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/tabbrowser.properties
+++ b/ko/browser/chrome/browser/tabbrowser.properties
@@ -133,3 +133,4 @@ tabs.openWarningPromptMeBranded=%S가 느려질 수 있는 여러 개의 탭 열
 
 browsewithcaret.checkMsg=이 대화 상자를 다시 표시하지 않음.
 browsewithcaret.checkWindowTitle=커서 브라우징
+browsewithcaret.checkLabel=F7 키를 누르면 커서 브라우징을 켜거나 끕니다. 이 기능은 웹 페이지에 이동 가능한 커서를 배치하여 키보드로 텍스트를 선택할 수 있습니다. 커서 브라우징을 켜시겠습니까?
