--- a/ko/toolkit/chrome/global/browser.properties
+++ b/ko/toolkit/chrome/global/browser.properties
@@ -4,7 +4,7 @@
 
 browsewithcaret.checkMsg=이 대화 상자를 다시 표시하지 않음.
 browsewithcaret.checkWindowTitle=커서 브라우징
-browsewithcaret.checkLabel=F7을 눌러 캐럿 기능을 켜거나 끌 수 있습니다. 이 기능을 이용하면 웹 페이지 내에서 커서를 키보드로 이동할 수 있습니다. 캐럿 기능을 사용하시겠습니까?
+browsewithcaret.checkLabel=F7 키를 누르면 커서 브라우징을 켜거나 끕니다. 이 기능은 웹 페이지에 이동 가능한 커서를 배치하여 키보드로 텍스트를 선택할 수 있습니다. 커서 브라우징을 켜시겠습니까?
 browsewithcaret.checkButtonLabel=예
 
 plainText.wordWrap=자동 줄 바꿈
