Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/dom/chrome/dom/dom.properties
+++ b/ko/dom/chrome/dom/dom.properties
@@ -113,6 +113,7 @@ MediaStreamAudioSourceNodeCrossOrigin=createMediaStreamSource에 보내진 Media
 MediaStreamTrackAudioSourceNodeCrossOrigin=createMediaStreamTrackSource에 전달된 MediaStreamTrack은 교차 원본 리소스이어서 노드에서 출력 내용이 없을 것입니다.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=캡처된 HTMLMediaElement가 MediaStream을 재생하고 있습니다. 음량을 설정하거나 음소거하는 기능은 현재 지원되지 않습니다.
+# LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaLoadExhaustedCandidates=자원 후보의 읽기가 모두 실패했습니다.미디어의 재생을 중지합니다.
 MediaLoadSourceMissingSrc=<source> 요소에 "src" 속성이 없습니다. 미디어를 읽어들일 수 없었습니다.
 MediaStreamAudioSourceNodeDifferentRate=서로 다른 샘플링 비율의 AudioContexts에서 AudioNodes로의 연결은 현재 지원되지 않습니다.
@@ -382,6 +383,9 @@ AllEntryTypesIgnored=유효한 entryTypes 없음. 등록 중단.
 # LOCALIZATION NOTE: do not localize key=“%S” modifiers=“%S” id=“%S”
 GTK2Conflict2=GTK2에서 사용할 수 없는 키 이벤트: key=“%S” modifiers=“%S” id=“%S”
 WinConflict2=일부 키보드 레이아웃에서는 사용할 수 없는 키 이벤트: key=“%S” modifiers=“%S” id=“%S”
+
+# LOCALIZATION NOTE: do not trnaslated "document.domain"
+DocumentSetDomainNotAllowedWarning=교차 원본 격리 환경에서 document.domain 설정은 허용되지 않습니다.
 
 #LOCALIZATION NOTE(DeprecatedTestingInterfaceWarning): Do not translate this message. It's just testing only.
 DeprecatedTestingInterfaceWarning=TestingDeprecatedInterface는 테스트 전용 인터페이스이며 이것은 테스팅 지원 중단 메시지입니다.
